# Manexp-Web-Lists

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
lists/treated/: crops_list.json
manexp_web_lists/: client.py  mail.py  mailer.py  main.py  models.py  test.py
manexp_web_lists/crops/: fetch_crops.py  fetch_crops.pyi  main.py  models.py
manexp_web_lists/crops/conversions/: varieties_to_crops.py
manexp_web_lists/crops/models/: crops.py  species.py  varieties.py
manexp_web_lists/json_client/: client.py  errors.py  types.py
manexp_web_lists/utils/: date_converter.py  strict_model.py
tests/: test_client.py  test_foo.py
